# CSC305_GLSL_Lecture

./: CMakeLists.txt  LICENSE  README.md
OpenGP/: .travis.yml  CMakeLists.txt  LGPL.txt  LICENSE
OpenGP/apps/imguitest/: CMakeLists.txt  main.cpp
OpenGP/apps/imshow/: CMakeLists.txt  main.cpp
OpenGP/apps/overhaul_test/: CMakeLists.txt  main.cpp  main_old.cpp
OpenGP/apps/projection_test/: CMakeLists.txt  main.cpp
OpenGP/apps/synth_depthmaps/: CMakeLists.txt  main.cpp
OpenGP/cmake/: ConfigurePNG.cmake
OpenGP/data/: example.smo  human.smo
OpenGP/src/: CMakeLists.txt
OpenGP/src/OpenGP/: MLogger.h  NullStream.h  headeronly.h  types.h
OpenGP/src/OpenGP/AppTemplates/: VirtualDepthSensor.h
OpenGP/src/OpenGP/CGAL/: AABBSearcher.h
OpenGP/src/OpenGP/Eigen/: Image.h
OpenGP/src/OpenGP/GL/: Application.cpp  Application.h  Buffer.h  DepthSurfaceRenderer.cpp  DepthSurfaceRenderer.h  Eigen.h  Entity.cpp  Entity.h  EventProvider.h  Framebuffer.h  FullscreenQuad.h  GPUMesh.h  GlfwFpsCounter.h  GlfwWindow.h  ImguiRenderer.h  Material.cpp  Scene.h  (+30 more)
apps/Ex1_Simple/: CMakeLists.txt  main.cpp
apps/Ex2_Shaders/: CMakeLists.txt  frag.glsl  main.cpp  vert.glsl
apps/Ex3_Geometry/: frag.glsl  main.cpp  vert.glsl
apps/Ex4_Advanced_Geometry/: CMakeLists.txt  geom.glsl  main.cpp  vert.glsl
apps/Ex5_Textures/: CMakeLists.txt  frag.glsl  main.cpp  vert.glsl
apps/Ex6_Shading/: CMakeLists.txt  frag.glsl  main.cpp  vert.glsl
apps/Ex7_Framebuffers/: CMakeLists.txt  effect_frag.glsl  frag.glsl  main.cpp  portal_frag.glsl  portal_vert.glsl  vert.glsl
cmake/: FindGLFW3.cmake  configure.cmake
(+57 files in other folders)
